task3.tf
# Task: Create VPC Using Terraform

resource "aws_vpc" "nautilus-vpc" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "nautilus-vpc"
  }
}
